// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordian Component only opens the last section when multiple sections have been clicked 1`] = `
<div>
  <ul
    className="Accordion"
  >
    <li>
      <button
        onClick={[Function]}
      >
        Section 1
      </button>
    </li>
    <li>
      <button
        onClick={[Function]}
      >
        Section 2
      </button>
    </li>
    <li>
      <button
        onClick={[Function]}
      >
        Section 3
      </button>
      <p>
        Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?
      </p>
    </li>
  </ul>
</div>
`;

exports[`Accordian Component opens any clicked section 1`] = `
<div>
  <ul
    className="Accordion"
  >
    <li>
      <button
        onClick={[Function]}
      >
        Section 1
      </button>
    </li>
    <li>
      <button
        onClick={[Function]}
      >
        Section 2
      </button>
      <p>
        Cupiditate tenetur aliquam necessitatibus id distinctio quas nihil ipsam nisi modi!
      </p>
    </li>
    <li>
      <button
        onClick={[Function]}
      >
        Section 3
      </button>
    </li>
  </ul>
</div>
`;

exports[`Accordian Component renders an empty ul and li when the sections prop is not supplied 1`] = `
<div>
  <ul
    className="Accordion"
  />
</div>
`;

exports[`Accordian Component renders no sections as active by default 1`] = `
<div>
  <ul
    className="Accordion"
  >
    <li>
      <button
        onClick={[Function]}
      >
        Section 1
      </button>
    </li>
    <li>
      <button
        onClick={[Function]}
      >
        Section 2
      </button>
    </li>
    <li>
      <button
        onClick={[Function]}
      >
        Section 3
      </button>
    </li>
  </ul>
</div>
`;
